# isd-agent-benchmark

./: .env.example  .gitignore  README.md  run_benchmark.py
agents/addie-agent/: README.md  pyproject.toml
agents/addie-agent/src/addie_agent/: __init__.py  agent.py  cli.py  prompts.py  state.py
agents/addie-agent/src/addie_agent/tools/: __init__.py  analysis.py  design.py  development.py  evaluation.py  implementation.py
agents/addie-agent/tests/: __init__.py  test_state.py  test_tools.py
agents/baseline/: README.md  pyproject.toml
agents/baseline/src/baseline/: __init__.py  cli.py  generator.py  prompts.py
agents/baseline/tests/: __init__.py  test_fallback.py
agents/dick-carey-agent/: README.md  pyproject.toml
agents/dick-carey-agent/src/dick_carey_agent/: __init__.py  agent.py  cli.py  prompts.py  state.py
agents/dick-carey-agent/src/dick_carey_agent/tools/: __init__.py  evaluation.py  goal_analysis.py  objective_assessment.py  strategy_materials.py
agents/dick-carey-agent/tests/: __init__.py  test_state.py  test_tools.py
agents/eduplanner/: README.md  pyproject.toml
agents/eduplanner/src/eduplanner/: __init__.py  cli.py
agents/eduplanner/src/eduplanner/agents/: __init__.py  analyst.py  base.py  evaluator.py  main.py  optimizer.py  prompts.py
agents/eduplanner/src/eduplanner/models/: __init__.py  schemas.py  skill_tree.py
agents/react-isd/: README.md  pyproject.toml
agents/react-isd/src/react_isd/: __init__.py  agent.py  cli.py
agents/react-isd/src/react_isd/tools/: __init__.py  analyze.py  design.py  develop.py  evaluate.py  implement.py  phases.py
agents/rpisd-agent/: README.md  pyproject.toml
agents/rpisd-agent/src/rpisd_agent/: __init__.py  agent.py  cli.py  prompts.py  state.py
agents/rpisd-agent/src/rpisd_agent/tools/: __init__.py  analysis.py  design.py  development.py  evaluation.py  implementation.py  kickoff.py  usability.py
agents/rpisd-agent/tests/: __init__.py  test_addie_completeness.py  test_dual_loop.py  test_state.py
evaluator/: README.md  pyproject.toml
evaluator/src/isd_evaluator/: __init__.py  cli.py
evaluator/src/isd_evaluator/metrics/: __init__.py  addie_rubric.py  composite.py  context_weights.py  multi_judge.py  trajectory.py
evaluator/src/isd_evaluator/models/: __init__.py
evaluator/src/isd_evaluator/reporters/: __init__.py  comparison.py
evaluator/src/isd_evaluator/rubrics/: __init__.py  addie_definitions.py
evaluator/src/isd_evaluator/runners/: __init__.py  agent_runner.py
evaluator/tests/: conftest.py  test_addie_rubric_aggregation.py  test_addie_rubric_integration.py  test_addie_rubric_parsing.py  test_composite_metrics.py  test_context_weights.py  test_education_domain.py  test_trajectory_metrics.py
evaluator/tests/fixtures/: __init__.py
evaluator/tests/fixtures/llm_responses/analysis/: broken_json.txt  malformed_structure.json  missing_fields.json  valid_response.json
evaluator/tests/fixtures/llm_responses/design/: valid_response.json
evaluator/tests/fixtures/llm_responses/development/: valid_response.json
evaluator/tests/fixtures/llm_responses/evaluation/: valid_response.json
evaluator/tests/fixtures/llm_responses/implementation/: valid_response.json
scenarios/: addie_axis_mapping_ko_en.json  axis_mapping_ko_en.json  sampling_strategy.py  split_metadata.json  split_train_test.py
scenarios/idld_aligned/: scenario_idld_0001.json  scenario_idld_0004.json  scenario_idld_0006.json  scenario_idld_0008.json  scenario_idld_0009.json  scenario_idld_0014.json  scenario_idld_0019.json  scenario_idld_0020.json  scenario_idld_0021.json  scenario_idld_0023.json  scenario_idld_0024.json  scenario_idld_0025.json  scenario_idld_0028.json  scenario_idld_0029.json  scenario_idld_0031.json  scenario_idld_0033.json  scenario_idld_0034.json  scenario_idld_0037.json  scenario_idld_0042.json  scenario_idld_0044.json  scenario_idld_0045.json  scenario_idld_0046.json  scenario_idld_0050.json  scenario_idld_0053.json  scenario_idld_0054.json  scenario_idld_0056.json  scenario_idld_0057.json  scenario_idld_0059.json  scenario_idld_0061.json  scenario_idld_0062.json  scenario_idld_0064.json  scenario_idld_0065.json  scenario_idld_0067.json  scenario_idld_0068.json  scenario_idld_0069.json  scenario_idld_0072.json  scenario_idld_0075.json  scenario_idld_0077.json  scenario_idld_0079.json  scenario_idld_0080.json  (+4381 more)
scenarios/quality_reports/: train_test_split_report.md
scenarios/test/: scenario_bal_large2_0075.json  scenario_bal_large2_0077.json  scenario_bal_large2_0138.json  scenario_bal_large2_0197.json  scenario_bal_large2_0217.json  scenario_bal_large2_0223.json  scenario_bal_large2_0244.json  scenario_bal_large2_0268.json  scenario_bal_large2_0306.json  scenario_bal_large2_0317.json  scenario_bal_large2_0319.json  scenario_bal_large2_0412.json  scenario_bal_large2_0417.json  scenario_bal_large2_0461.json  scenario_bal_large2_0465.json  scenario_bal_large2_0547.json  scenario_bal_large2_0700.json  scenario_bal_large2_0758.json  scenario_bal_large2_0777.json  scenario_bal_large2_0864.json  scenario_bal_large2_0909.json  scenario_bal_large2_0911.json  scenario_bal_large2_0933.json  scenario_bal_large2_0947.json  scenario_bal_large2_0986.json  scenario_bal_large2_1004.json  scenario_bal_large2_1011.json  scenario_bal_large2_1084.json  scenario_bal_large2_1085.json  scenario_bal_large2_1095.json  scenario_bal_large2_1112.json  scenario_bal_large2_1134.json  scenario_bal_large2_1160.json  scenario_bal_large2_1197.json  scenario_bal_large2_1301.json  scenario_bal_large2_1378.json  scenario_bal_large2_1486.json  scenario_bal_large2_1499.json  scenario_bal_large2_1541.json  scenario_bal_large2_1563.json  (+573 more)
scenarios/train/: scenario_bal_large2_0002.json  scenario_bal_large2_0006.json  scenario_bal_large2_0007.json  scenario_bal_large2_0011.json  scenario_bal_large2_0013.json  scenario_bal_large2_0014.json  scenario_bal_large2_0015.json  scenario_bal_large2_0016.json  scenario_bal_large2_0017.json  (+12193 more)
scripts/: 1_setup.sh  2_split_data.sh  3_run_benchmark_test.sh  4_run_benchmark.sh
shared/: __init__.py
(+8584 files in other folders)
