[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isd-evaluator"
version = "0.1.0"
description = "교수설계 Agent 평가 시스템 - CIDPP 메트릭 기반"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Upstage ISD Team" }
]
keywords = ["instructional-design", "evaluation", "addie", "cidpp", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
isd-evaluator = "isd_evaluator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/isd_evaluator"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
