[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "addie-agent"
version = "0.1.0"
description = "ADDIE 모형 기반 순차적 교수설계 에이전트 - LangGraph StateGraph 활용"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Upstage ISD Team" }
]
keywords = ["instructional-design", "addie", "langgraph", "agent", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
addie-agent = "addie_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/addie_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
