[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baseline"
version = "0.1.0"
description = "Baseline ISD Agent - Single prompt ADDIE generator (Multi-provider support)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "ISD Agent Team" }
]
keywords = ["instructional-design", "addie", "baseline", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
baseline = "baseline.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/baseline"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
