[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpisd-agent"
version = "0.1.0"
description = "RPISD 모형 기반 래피드 프로토타이핑 교수설계 에이전트 - 이중 루프 StateGraph"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Upstage ISD Team" }
]
keywords = [
    "instructional-design",
    "rapid-prototyping",
    "rpisd",
    "langgraph",
    "agent",
    "workflow",
    "dual-loop",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "jsonschema>=4.0.0",
]

[project.scripts]
rpisd-agent = "rpisd_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rpisd_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
